--- a/index.html
+++ b/index.html
@@ -10,5 +10,16 @@
 <body>
     <h1>Custom Vid Player</h1>
     <video src="video/gone.mp4" class="screen" poster="poster/poster.png"></video>
+
+    <div class="controls">
+        <button class="btn play">
+            <i class="fa fa-play fa2x"></i>
+        </button>
+        <button class="btn stop">
+            <i class="fa fa-stop fa2x"></i>
+        </button>
+        <input type="range" class="progress" min="0" max="100" step="0.1" value="0">
+        <span class="timestamp">00:00</span>
+    </div>
 </body>
 </html>
