Add id to elements in html

--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 </head>
 <body>
     <h1>Custom Vid Player</h1>
-    <video src="video/gone.mp4" class="screen" poster="poster/poster.png"></video>
+    <video src="video/gone.mp4" id="video" class="screen" poster="poster/poster.png"></video>
 
     <div class="controls">
-        <button class="btn play">
+        <button id="play" class="btn">
             <i class="fa fa-play fa2x"></i>
         </button>
-        <button class="btn stop">
+        <button id="stop" class="btn">
             <i class="fa fa-stop fa2x"></i>
         </button>
-        <input type="range" class="progress" min="0" max="100" step="0.1" value="0">
-        <span class="timestamp">00:00</span>
+        <input type="range" id="progress" class="progress" min="0" max="100" step="0.1" value="0">
+        <span id="timestamp" class="timestamp">00:00</span>
     </div>
 </body>
 </html>
