--- a/index.html
+++ b/index.html
@@ -22,5 +22,7 @@
         <input type="range" id="progress" class="progress" min="0" max="100" step="0.1" value="0">
         <span id="timestamp" class="timestamp">00:00</span>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
