Change h1 text & change size & boldness

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Custom Vid Player</title>
 </head>
 <body>
-    <h1>Custom Vid Player</h1>
+    <h1>Let's Go Fishing!</h1>
     <video src="video/gone.mp4" id="video" class="screen" poster="poster/poster.png"></video>
 
     <div class="controls">
